syntax = "proto3";

package chat;

option go_package = "protobuf/chat/golang/conversationpb";

import "google/protobuf/timestamp.proto";

enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_NEW = 1;
  STATUS_OPEN = 2;
  STATUS_CLOSED = 3;
  STATUS_BOT_HANDLING = 4;
}

message Conversation {
  string id = 1;
  string client_user_id = 2;
  string assigned_support_id = 3;
  Status status = 4;
  string last_message_snippet = 5;
  string last_message_sender_id = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  google.protobuf.Timestamp closed_at = 9;
}

enum SortDirection {
  SORT_DIRECTION_UNSPECIFIED = 0;
  SORT_DIRECTION_ASC = 1;
  SORT_DIRECTION_DESC = 2;
}

message ConversationListRequest {
  uint64 current_page = 1;
  uint64 page_size = 2;
  SortDirection sort_direction = 3;
  string assigned_support_id = 4;
  repeated Status statuses = 5;
}

message ConversationListResponse {
  uint64 current_page = 1;
  uint64 page_size = 2;
  uint64 total_number = 3;
  uint64 total_page = 4;
  repeated Conversation conversations = 5;
}

message ChatHistoryRequest {
  string conversation_id = 1;
  string cursor = 2;
  int32 limit = 3;
}

enum MessageType {
  TYPE_UNSPECIFIED = 0;
  TYPE_TEXT = 1;
  TYPE_MEDIA = 2;
  TYPE_SYSTEM = 3;
}

message Message {
  string id = 1;
  string conversation_id = 2;
  string sender_id = 3;
  MessageType message_type = 4;
  string content = 5;
  map<string, string> metadata = 6;
  string replied_to_message_id = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp read_at = 9;
}

message ChatHistoryResponse {
  repeated Message results = 1;
  string next_cursor = 2;
  bool has_more = 3;
}

message OpenConversationRequest {
  string conversation_id = 1;
}

message CloseConversationRequest {
  string conversation_id = 1;
}

message ConversationDetailRequest {
  string conversation_id = 1;
}

message ClientInfo {
  string id = 1;
  string fullname = 2;
  string phone_number = 3;
  string email = 4;
  string avatar = 5;
  google.protobuf.Timestamp last_online_at = 6;
}

message SupportInfo {
  string id = 1;
  string fullname = 2;
  string avatar = 3;
  google.protobuf.Timestamp last_online_at = 4;
}

message ConversationDetailResponse {
  Conversation Conversation = 1;
  ClientInfo client_info = 2;
  SupportInfo support_info = 3;
}

service ConversationService {
  rpc ConversationNewList (ConversationListRequest) returns (ConversationListResponse);
  rpc ConversationOwnList (ConversationListRequest) returns (ConversationListResponse);
  rpc ChatHistory (ChatHistoryRequest) returns (ChatHistoryResponse);
  rpc OpenConversation (OpenConversationRequest) returns (Conversation);
  rpc CloseConversation (CloseConversationRequest) returns (Conversation);
  rpc ConversationDetail (ConversationDetailRequest) returns (ConversationDetailResponse);
}
